Fixed an error.

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@ Its goals are education, hacking/modification, and lightweight but legitimate ga
 <li><code>Entity system</code>: entities with behavior defined via callbacks</li>
 <li><code>Scene interface</code>: generic dependency-injection model for different scene types</li>
 <li><code>CollisionScene</code>: entity–entity collisions via spatial hashing</li>
-<li><code>Renderer</code>: frustum culling (sphere–frustum) and transparent object sorting</li>
+<li><code>Renderer</code>: frustum culling (sphere–frustum) and eventually transparent object sorting</li>
 </ul>
 <p>Each public-facing system exposes vtables for plugging in custom behaviors. This makes the engine suitable both for simple games and as a foundation for building more complete, specialized engines.</p>
 <p>It's currently in alpha, but already demonstrates the core principles of game engine architecture in a compact, accessible way.</p>
@@ -79,11 +79,11 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="fps_1" href="#FPS_CONTROLLER" onclick="changeVideoSrc('fps_controller', 'fps_controller_1')">
                 Demo 1
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="fps_2" href="#FPS_CONTROLLER" onclick="changeVideoSrc('fps_controller', 'fps_controller_2')">
                 Demo 2
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="fps_3" href="#FPS_CONTROLLER" onclick="changeVideoSrc('fps_controller', 'fps_controller_3')">
                 Demo 3
         </a>
@@ -107,7 +107,7 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="6dof_1" href="#6DOF_CONTROLLER" onclick="changeVideoSrc('6dof_controller', '6dof_demo_1')">
                 Demo 1
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="6dof_2" href="#6DOF_CONTROLLER" onclick="changeVideoSrc('6dof_controller', '6dof_demo_2')">
                 Demo 2
         </a>
@@ -148,19 +148,19 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="mgirl_0" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl.jpg')">
                 Mall hub level
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="mgirl_1" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl-0.jpg')">
                 Firing
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="mgirl_2" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl-1.jpg')">
                 After firing for a bit
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="mgirl_3" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl-3.jpg')">
                 Some world models I had made
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="mgirl_4" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl_staff.jpg')">
                 The heart wand
         </a>
@@ -185,15 +185,15 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="gaunt_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_wiz_skelly.jpg')">
                 Fighting Skeletons as the Wizard
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="gaunt_1" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_barbarian_ghosts.jpg')">
                 Fighting ghosts as the Barbarian
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="gaunt_2" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg')">
                 Items
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="gaunt_3" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_potion.jpg')">
                 Potion
         </a>
@@ -239,47 +239,47 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qfl.png')">
                 3-Quarter front left
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qfr.png')">
                 3-Quarter front right
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qrl.png')">
                 3-Quarter rear left
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qrr.png')">
                 3-Quarter rear right
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/front.png')">
                 Front
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/rear.png')">
                 Rear
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/side_l.png')">
                 Left
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/side_r.png')">
                 Right
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/locked_l.png')">
                 Locked open, left
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/locked_r.png')">
                 Locked open, right
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/under_slide.png')">
                 Under slide
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/Glock17.png')">
                 Texture
         </a>
@@ -304,51 +304,51 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="samus_1" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/animations.gif')">
                 Animations
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3Q.png')">
                 3-Quarter clay render
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3QOpen.png')">
                 3-Quarter clay render, open
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/fpView.png')">
                 First person clay render
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/fpViewOpen.png')">
                 First person clay render, open
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/front.png')">
                 Front clay render
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/side.png')">
                 Side clay render
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/top.png')">
                 Top clay render
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/armCannonTex.png')">
                 Texture
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3QTex3.png')">
                 3-Quarter textured
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3QOpenTex3.png')">
                 3-Quarter textured, open
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/fpViewTex3.png')">
                 First person textured
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/sideTex3.png')">
                 Side textured
         </a>
@@ -361,11 +361,11 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="robot_1" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM_C0.gif')">
                 Walking, ready
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="robot_2" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM_D.gif')">
                 Crouch-walking, ready
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="robot_3" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM4.gif')">
                 Walking, no gun
         </a>
@@ -378,27 +378,27 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="star_1" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk1.gif')">
                 Mech, Walking
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="star_2" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk.gif')">
                 Mech, Walking, alternate view 1
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="star_3" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk0.gif')">
                 Mech, Walking, alternate view 2
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="star_4" href="#STAR" onclick="changeImgSrc('STAR', '3d/hmv_pic3.png')">
                 HMV
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="star_5" href="#STAR" onclick="changeImgSrc('STAR', '3d/tank_pic9.png')">
                 Tank
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="star_6" href="#STAR" onclick="changeImgSrc('STAR', '3d/turret_1.png')">
                 Sentry turret
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="star_7" href="#STAR" onclick="changeImgSrc('STAR', '3d/jet.jpg')">
                 Jet with Texture
         </a>
@@ -411,27 +411,27 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="guns_1" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/muziSnapTex.png')">
                 Micro-Uzi
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="guns_2" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render2cb.png')">
                 Kriss Vektor
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="guns_3" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/sgunSnapshotWTEX.png')">
                 Ithaca 37 Stakeout
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="guns_4" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/texturedShadedRender3.png')">
                 AR-15
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="guns_5" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render6-.png')">
                 FAMAS, untextured
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="guns_3" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render.png')">
                 Recoilless Rifle, clay render
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="guns_3" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render8.png')">
                 Saiga-12, untextured
         </a>
@@ -444,15 +444,15 @@ In the meantime, the project has already been a valuable prototype, teaching me 
         <a id="wallpaper_1" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/goreEffectHD_glow.png')">
                 Synthwave Terrain
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="wallpaper_2" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/goreEffectHD_glow1.jpg')">
                 Synthwave Terrain, alternate glow
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="wallpaper_3" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/vaporscapeColorSolids_8.png')">
                 Synthwave Color Solids
         </a>
-        &emsp;|&emsp;
+         | 
         <a id="wallpaper_4" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/burger4.png')">
                 RetroWave fast food
         </a>
