--- a/index.htm
+++ b/index.htm
@@ -47,8 +47,17 @@ Christopher DeBoy's Portfolio
 <hr />
 <h3 id="a-href-https-github-com-8bitprodigy-kolibri-engine-kolibri-engine-a"><a href="#a-href-https-github-com-8bitprodigy-kolibri-engine-kolibri-engine-a" class="anchor" aria-hidden="true">🔗</a><a href="https://github.com/8bitprodigy/kolibri_engine">Kolibri Engine</a></h3>
 <video id="kolibri_demo" controls>
-        <source src="videos/kolibri_demo_0.mp4" type="video/mp4" />
+        <source src="videos/kolibri_demo_1.mp4" type="video/mp4" />
 </video>
+<center>
+        <a id="kolibri_1" href="#KOLIBRI_DEMOI" onclick="changeVideoSrc('kolibri_demo', 'kolibri_demo_0')">
+                Kolibri demo 1
+        </a>
+         | 
+        <a id="kolibri_2" href="#FPS_CONTROLLER" onclick="changeVideoSrc('kolibri_demo', 'kolibri_demo_0')">
+                Kolibri demo 2
+        </a>
+</center>
 <p>This is a minimalist 3D game engine I wrote in C using raylib, weighing in at under 3,000 lines of code.
 Its goals are education, hacking/modification, and lightweight but legitimate game development. By focusing only on the core essentials of what makes an engine, it stands apart from conventional engines that accumulate large feature sets.</p>
 <p>Currently it includes:</p>
