--- a/index.htm
+++ b/index.htm
@@ -57,6 +57,14 @@ Christopher DeBoy's Portfolio
         <a id="kolibri_2" href="#FPS_CONTROLLER" onclick="changeVideoSrc('kolibri_demo', 'kolibri_demo_1')">
                 Kolibri demo 2
         </a>
+         | 
+        <a id="kolibri_3" href="#FPS_CONTROLLER" onclick="changeVideoSrc('kolibri_demo', 'kolibri_demo_2')">
+                Kolibri demo 3 (weapons showcase)
+        </a>
+         | 
+        <a id="kolibri_4" href="#FPS_CONTROLLER" onclick="changeVideoSrc('kolibri_demo', 'kolibri_demo_3')">
+                Kolibri demo 4 (loading screens)
+        </a>
 </center>
 <p>This is a minimalist 3D game engine I wrote in C using raylib, weighing in at under 3,000 lines of code.
 Its goals are education, hacking/modification, and lightweight but legitimate game development. By focusing only on the core essentials of what makes an engine, it stands apart from conventional engines that accumulate large feature sets.</p>
